--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>小米官网——小米手机、红米手机、小米电视官方正品专卖网站</title>
+    <title>小米官网——小米手机、红米手机、小米电视官方正品专卖网站1111</title>
     <link rel="stylesheet" href="style.css"/>
     <script src="common.js"></script>
 </head>
@@ -397,8 +397,10 @@
             </div>
             <div class="search">
                 <form action="#">
-                    <input type="text" class="search-text fl"/>
-                    <input type="submit" style="font-size: 20px; font-weight: bold;" class="search-btn fl iconfont" value=""/>
+                    <label>
+                        <input type="text" class="search-text fl"/>
+                        <input type="submit" style="font-size: 20px; font-weight: bold;" class="search-btn fl iconfont" value=""/>
+                    </label>
                 </form>
             </div>
         </div>
@@ -414,11 +416,11 @@
 	    sidenavItems[i].onmouseover = function(){
 	        var curIndex = this.index;
 	        sidenavSub[curIndex].style.display = "block";
-	        this.onmouseout = function(){
+            sidenavItems[curIndex].onmouseout = function(){
 	        	sidenavSub[curIndex].style.display = 'none';
 	        	sidenavSub[curIndex].onmouseover =function(){
 	        		this.style.display = 'block';
-	        	}
+	        	};
 	        	sidenavSub[curIndex].onmouseout =function(){
 	        		this.style.display = 'none';
 	        	}
