--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="login"><a href="#">登录</a></div>
             <div class="reg"><a href="#">注册</a></div>
             <div class="shopcar">
-                <a href="#" ><i class="iconfont"></i>&nbsp;购物车(0)</a>
+                <a href="#" ><i class="iconfont"></i>&nbsp;购物车(0)</a>
             </div>
             <div class="shopcar-box">
                 <div class="shopcar-item">
@@ -57,16 +57,16 @@
             <img class="fl" src="img/logo.png">
             <div class="navbar-sidenav fl">
                 <ul class="sidenav">
-                    <li class="sidenav-item">手机 平板 电话卡<i class="iconfont fr"></i></li>
-                    <li class="sidenav-item">电视 盒子<i class="iconfont fr"></i></li>
-                    <li class="sidenav-item">路由器 智能硬件<i class="iconfont fr"></i></li>
-                    <li class="sidenav-item">移动电源 插线板<i class="iconfont fr"></i></li>
-                    <li class="sidenav-item">耳机 音响<i class="iconfont fr"></i></li>
-                    <li class="sidenav-item">电池 存储卡<i class="iconfont fr"></i></li>
-                    <li class="sidenav-item">保护套 后盖<i class="iconfont fr"></i></li>
-                    <li class="sidenav-item">贴膜 其他配件<i class="iconfont fr"></i></li>
-                    <li class="sidenav-item">米兔 服装<i class="iconfont fr"></i></li>
-                    <li class="sidenav-item">箱包 其他周边<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">手机 平板 电话卡<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">电视 盒子<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">路由器 智能硬件<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">移动电源 插线板<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">耳机 音响<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">电池 存储卡<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">保护套 后盖<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">贴膜 其他配件<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">米兔 服装<i class="iconfont fr"></i></li>
+                    <li class="sidenav-item">箱包 其他周边<i class="iconfont fr"></i></li>
                 </ul>
                 <div class="sidenav-hot">
                     <div class="sidenav-sub sub-col-3">
@@ -399,7 +399,7 @@
                 <form action="#">
                     <label>
                         <input type="text" class="search-text fl"/>
-                        <input type="submit" style="font-size: 20px; font-weight: bold;" class="search-btn fl iconfont" value=""/>
+                        <input type="submit" style="font-size: 20px; font-weight: bold;" class="search-btn fl iconfont" value=""/>
                     </label>
                 </form>
             </div>
@@ -474,20 +474,69 @@
         <ul class="star-item-list">
             <li class="star-item">
                 <a href="#"><img src="img/star.jpg"></a>
-                <h4 class="star-item-title">小米手机4</h4>
+                <a href="#" class="star-item-title">小米手机4</a>
                 <div class="star-item-desc">工艺和手感超乎想象</div>
                 <div class="star-item-price">1299元起</div>
             </li>
-            <li class="star-item"></li>
-            <li class="star-item"></li>
-            <li class="star-item"></li>
-            <li class="star-item"></li>
-            <li class="star-item"></li>
-            <li class="star-item"></li>
-            <li class="star-item"></li>
-            <li class="star-item"></li>
-            <li class="star-item"></li>
+            <li class="star-item">
+                <a href="#"><img src="img/star.jpg"></a>
+                <a href="#" class="star-item-title">小米手机4</a>
+                <div class="star-item-desc">工艺和手感超乎想象</div>
+                <div class="star-item-price">1299元起</div>
+            </li>
+            <li class="star-item">
+                <a href="#"><img src="img/star.jpg"></a>
+                <a href="#" class="star-item-title">小米手机4</a>
+                <div class="star-item-desc">工艺和手感超乎想象</div>
+                <div class="star-item-price">1299元起</div>
+            </li>
+            <li class="star-item">
+                <a href="#"><img src="img/star.jpg"></a>
+                <a href="#" class="star-item-title">小米手机4</a>
+                <div class="star-item-desc">工艺和手感超乎想象</div>
+                <div class="star-item-price">1299元起</div>
+            </li>
+            <li class="star-item">
+                <a href="#"><img src="img/star.jpg"></a>
+                <a href="#" class="star-item-title">小米手机4</a>
+                <div class="star-item-desc">工艺和手感超乎想象</div>
+                <div class="star-item-price">1299元起</div>
+            </li>
+            <li class="star-item">
+                <a href="#"><img src="img/star.jpg"></a>
+                <a href="#" class="star-item-title">小米手机4</a>
+                <div class="star-item-desc">工艺和手感超乎想象</div>
+                <div class="star-item-price">1299元起</div>
+            </li>
+            <li class="star-item">
+                <a href="#"><img src="img/star.jpg"></a>
+                <a href="#" class="star-item-title">小米手机4</a>
+                <div class="star-item-desc">工艺和手感超乎想象</div>
+                <div class="star-item-price">1299元起</div>
+            </li>
+            <li class="star-item">
+                <a href="#"><img src="img/star.jpg"></a>
+                <a href="#" class="star-item-title">小米手机4</a>
+                <div class="star-item-desc">工艺和手感超乎想象</div>
+                <div class="star-item-price">1299元起</div>
+            </li>
+            <li class="star-item">
+                <a href="#"><img src="img/star.jpg"></a>
+                <a href="#" class="star-item-title">小米手机4</a>
+                <div class="star-item-desc">工艺和手感超乎想象</div>
+                <div class="star-item-price">1299元起</div>
+            </li>
+            <li class="star-item">
+                <a href="#"><img src="img/star.jpg"></a>
+                <a href="#" class="star-item-title">小米手机4</a>
+                <div class="star-item-desc">工艺和手感超乎想象</div>
+                <div class="star-item-price">1299元起</div>
+            </li>
         </ul>
+        <div class="star-controller">
+            <div class="star-prev"><i class="iconfont"></i></div>
+            <div class="star-next"><i class="iconfont"></i></div>
+        </div>
     </div>
 </div>
 <script>
@@ -517,14 +566,14 @@
 		bannerTo(index);
 		pos = index;
 	};
-	var timer = setInterval(function(){
+	var bannerTimer = setInterval(function(){
 		autoBanner();
 	},2000);
 	banner.onmouseover = function(){
-		clearInterval(timer);
+		clearInterval(bannerTimer);
 	};
 	banner.onmouseout = function(){
-		timer = setInterval(function(){
+		bannerTimer = setInterval(function(){
 			autoBanner();
 		},2000)
 	};
@@ -537,16 +586,72 @@
 	function bannerTo(index){
 		startMove(slides[pos],{"opacity":0});
 		startMove(slides[index],{"opacity":100});
-		// slides[pos].style.opacity = 0;
-		// slides[index].style.opacity = 1;
 		controllerDot[pos].style.backgroundColor = "rgba(0,0,0,0.4)";
 		controllerDot[index].style.backgroundColor = "rgba(255,255,255,0.4)";
 		pos = index;
 	}
 
+    var starPrev = document.querySelector('.star-prev'),
+        starNext = document.querySelector('.star-next'),
+        starItemList = document.querySelector(".star-item-list"),
+        star = document.querySelector('.star'),
+        flag = true;
+    console.log(starPrev);
+    starPrev.onclick = function(){
+        if(!flag){
+            startMove(starItemList,{"left":0});
+            flag = !flag;
+            this.style.opacity = 0.5;
+            starNext.style.opacity = 1;
+            this.style.cursor = 'auto';
+            starNext.style.cursor = 'pointer';
+        }
+    };
+    starNext.onclick = function(){
+        if(flag){
+            startMove(starItemList,{"left":-1240});
+            flag = !flag;
+            this.style.opacity = 0.5;
+            starPrev.style.opacity = 1;
+            this.style.cursor = 'auto';
+            starPrev.style.cursor = 'pointer';
+        }
+    };
+
+    star.onmouseover = function(){
+        clearInterval(starTimer);
+    };
+    star.onmouseout = function(){
+        starTimer = setInterval(function(){
+            starAuto();
+        },5000);
+    };
+    var starTimer = setInterval(function(){
+        starAuto()
+    },5000);
+
+    function starAuto(){
+        if(flag){
+            startMove(starItemList,{"left":-1240});
+            flag = !flag;
+            starNext.style.opacity = 0.5;
+            starPrev.style.opacity = 1;
+            starNext.style.cursor = 'auto';
+            starPrev.style.cursor = 'pointer';
+        }else{
+            startMove(starItemList,{"left":0});
+            flag = !flag;
+            starPrev.style.opacity = 0.5;
+            starNext.style.opacity = 1;
+            starPrev.style.cursor = 'auto';
+            starNext.style.cursor = 'pointer';
+        }
+    }
 })()
 
 </script>
-<div class="main"></div>
+<div class="main">
+
+</div>
 </body>
 </html>
