--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
         <div class="footer-img fr"><img src="img/footer1.png" class="f-img" alt=""/><img src="img/footer2.png" class="f-img" alt=""/><img src="img/footer3.png" class="f-img" alt=""/></div>
     </div>
 </div>
-<script src="js/common.js"></script>
+<script src="js/util.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
